--- a/for blog function pratice/Kotlin/etc/Coroutine/app/src/main/res/layout/activity_main.xml
+++ b/for blog function pratice/Kotlin/etc/Coroutine/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,24 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/tv_test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="70dp"
+        android:text="코루틴 테스트"
+        android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_execute"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="@+id/tv_test"
+        app:layout_constraintStart_toStartOf="@+id/tv_test"
+        app:layout_constraintTop_toBottomOf="@+id/tv_test" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
