--- a/for blog function pratice/Kotlin/DB/FlowRoom/app/src/main/res/layout/activity_main.xml
+++ b/for blog function pratice/Kotlin/DB/FlowRoom/app/src/main/res/layout/activity_main.xml
@@ -32,8 +32,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_list"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:adapter="@{adapter}"
-        app:setCharacter="@{viewModel.characterList}"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
@@ -44,7 +42,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
-
+<!--    android:adapter="@{adapter}"-->
+<!--    app:setCharacter="@{viewModel.characterList}"-->
     <Button
         android:id="@+id/button_add"
         android:layout_width="wrap_content"
