--- a/for blog function pratice/Kotlin/DB/FlowRoom/app/src/main/res/layout/recycler_view_list.xml
+++ b/for blog function pratice/Kotlin/DB/FlowRoom/app/src/main/res/layout/recycler_view_list.xml
@@ -31,9 +31,9 @@
             android:scaleType="fitCenter"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-
+            app:srcCompat="@{character.imageKey}"
             />
-<!--        app:srcCompat="@{ContextCompat.getDrawable(context, character.image)}"-->
+
         <View
             android:id="@+id/view_border"
             android:layout_width="100dp"
@@ -49,24 +49,24 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
-
+            android:text="@{character.title}"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_art"
             app:layout_constraintTop_toTopOf="parent"
             />
-<!--        android:text="@{context.getString(character.title)}"-->
+
         <TextView
             android:id="@+id/tv_describe"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-
+            android:text="@{character.describe}"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="@+id/tv_title"
             app:layout_constraintStart_toStartOf="@+id/tv_title"
             app:layout_constraintTop_toBottomOf="@+id/tv_title"
             />
-<!--        android:text="@{context.getString(character.describe)}"-->
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
