--- a/for blog function pratice/Kotlin/etc/ListTextView/app/src/main/res/layout/activity_main.xml
+++ b/for blog function pratice/Kotlin/etc/ListTextView/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,23 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/tv_person"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="50dp"
+        android:text="이곳에 정보가 표시됩니다."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="정보 출력"
+        app:layout_constraintEnd_toEndOf="@+id/tv_person"
+        app:layout_constraintStart_toStartOf="@+id/tv_person"
+        app:layout_constraintTop_toBottomOf="@+id/tv_person" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
